# python-sagemcom-api

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md  unsupported-model.md
.github/workflows/: main.yaml  pr-labeler.yml  publish-pypi-test.yml  release-drafter.yml  release.yml
docs/: debugging.md  ssl-error.md  testing.md
sagemcom_api/: __init__.py  action_error_exception_handler.py  client.py  const.py  enums.py  exceptions.py  models.py  sagemcom_api.py
tests/: __init__.py  conftest.py  test_sagemcom.py
tests/fixtures/: device_info.json  device_info_fallback_partial.json  hosts.json  login_auth_error.json  login_invalid_session.json  login_success.json  xpath_invalid_path.json  xpath_unknown_path_error.json  xpath_value.json  xpaths_mixed_errors.json
tests/unit/: test_action_error_handler.py  test_client_basic.py
