[project]
name = "sagemcom_api"
version = "1.2.1"
description = "Python client to interact with SagemCom F@st routers via internal API's."
readme = "README.md"
authors = [
    {name = "Mick Vleeshouwer", email = "mick@imick.nl"},
]
license = {text = "MIT"}
requires-python = ">=3.9,<4.0"
keywords = ["sagemcom", "f@st"]
dependencies = [
    "aiohttp>=3.7.3,<4.0.0",
    "pyhumps>=3.0.2,<4.0.0",
    "backoff>=1.10.0,<3.0",
    "backports-strenum>=1.3.1,<2.0; python_version < \"3.11\"",
]

[project.urls]
homepage = "https://github.com/iMicknl/python-sagemcom-api"
repository = "https://github.com/iMicknl/python-sagemcom-api"
"Bug Tracker" = "https://github.com/iMicknl/python-sagemcom-api/issues"

[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "pytest-asyncio>=1.2.0,<2.0",
    "pytest-aiohttp>=1.0.5,<2.0",
    "pytest-cov>=7.0.0,<8.0",
    "prek>=0.3.8,<1.0",
    "ruff>=0.9.0,<1.0",
    "mypy>=1.19,<2.0",
    "ty>=0.0.29,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "sagemcom_api/*",
]

[tool.hatch.build.targets.wheel]
packages = ["sagemcom_api"]
only-packages = true

[tool.ruff]
line-length = 140
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "asyncio: mark test as an asyncio test",
    "integration: mark test as an integration test (requires router access)",
]
